PreLab/DMSLab_instructor_CFN.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Resources": {
        "dmsinstructorvpc": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMSLabSourceDB"
                    }
                ]
            }
        },
        "RDSSubNet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.1.0/24",
                "AvailabilityZone": "us-east-1d",
                "VpcId": {
                    "Ref": "dmsinstructorvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMSLabRDS1"
                    }
                ]
            }
        },
        "EC2SubNet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "AvailabilityZone": "us-east-1c",
                "VpcId": {
                    "Ref": "dmsinstructorvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMSLabEC2"
                    }
                ]
            }
        },
        "RDSSubNet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.2.0/24",
                "AvailabilityZone": "us-east-1b",
                "VpcId": {
                "Ref": "dmsinstructorvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMSLabRDS2"
                    }
                ]
            }
        },
        "igw0887475a258f00277": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMSLabIGW"
                    }
                ]
            }
        },
        "dopt1cc25278": {
            "Type": "AWS::EC2::DHCPOptions",
            "Properties": {
                "DomainName": "ec2.internal",
                "DomainNameServers": [
                    "AmazonProvidedDNS"
                ]
            }
        },
        "rtb0c3fae104a7b64456": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "dmsinstructorvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMSLabRT"
                    }
                ]
            }
        },
        "instancei0f63b887480639040": {
            "Type": "AWS::EC2::Instance",
            "DependsOn": "rdsdmslabdb",
            "Properties": {
                "DisableApiTermination": "false",
                "InstanceInitiatedShutdownBehavior": "stop",
                "EbsOptimized": "true",
                "ImageId": "ami-04681a1dbd79675a5",
                "InstanceType": "t3.2xlarge",
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "Content-Type: multipart/mixed; boundary=\"//\"\n",
                                "MIME-Version: 1.0\n",
                                "\n",
                                "--//\n",
                                "Content-Type: text/cloud-config; charset=\"us-ascii\"\n",
                                "MIME-Version: 1.0\n",
                                "Content-Transfer-Encoding: 7bit\n",
                                "Content-Disposition: attachment; filename=\"cloud-config.txt\"\n",
                                "\n",
                                "#cloud-config\n",
                                "cloud_final_modules:\n",
                                "- [scripts-user, always]\n",
                                "\n",
                                "--//\n",
                                "Content-Type: text/x-shellscript; charset=\"us-ascii\"\n",
                                "MIME-Version: 1.0\n",
                                "Content-Transfer-Encoding: 7bit\n",
                                "Content-Disposition: attachment; filename=\"userdata.txt\"\n",
                                "\n",
                                "#!/bin/bash -xe\n",
                                "yum install -y postgresql\n",
                                "yum install -y git\n",
                                "yum update -y\n",
                                "cd /home/ec2-user\n",
                                "DIR=\"aws-database-migration-samples\"\n",
                                "if [ ! -d \"$DIR\" ]; then\n",
                                "git clone https://github.com/aws-samples/aws-database-migration-samples.git\n",
                                "fi\n",
                                "cd aws-database-migration-samples/PostgreSQL/sampledb/v1/\n",
                                "export PGPASSWORD=master123\n",
                                "export ENDPOINT=",
                                {"Fn::GetAtt":["rdsdmslabdb","Endpoint.Address"]},
                                "\n",
                                "nohup psql --host=${ENDPOINT} --port=5432 --dbname=sportstickets --username=master -f install-postgresql.sql\n",
                                "--//\n",
                                "\n"
                            ]
                        ]
                    }
                },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMSLabEC2"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "EC2SubNet"
                        },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.0.0.40",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "sgDMSLabSG"
                            }
                        ],
                        "AssociatePublicIpAddress": "true"
                    }
                ]
            }
        },
        "rdsdmslabdb": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "AllocatedStorage": "500",
                "AllowMajorVersionUpgrade": "false",
                "AutoMinorVersionUpgrade": "true",
                "DBInstanceClass": "db.t2.2xlarge",
		        "DBInstanceIdentifier": "dmslabinstance",
                "Port": "5432",
                "PubliclyAccessible": "true",
                "StorageType": "gp2",
                "BackupRetentionPeriod": "7",
                "MasterUsername": "master",
                "MasterUserPassword": "master123",
                "PreferredBackupWindow": "04:00-04:30",
                "PreferredMaintenanceWindow": "sun:05:20-sun:05:50",
                "DBName": "sportstickets",
                "Engine": "postgres",
                "EngineVersion": "11.5",
                "LicenseModel": "postgresql-license",
                "DBSubnetGroupName": {
                    "Ref": "dbsubnetdefaultdmsinstructorvpc"
                },
                "DBParameterGroupName": {
                    "Ref": "dbpgdataengdmsgroup"
                },
                "VPCSecurityGroups": [
                    {
                        "Ref": "sgrdslaunchwizard2"
                    }
                ],
                "Tags": [
                    {
                        "Key": "workload-type",
                        "Value": "other"
                    }
                ]
            }
        },
        "dbsubnetdefaultdmsinstructorvpc": {
            "Type": "AWS::RDS::DBSubnetGroup",
            "Properties": {
                "DBSubnetGroupDescription": "Created from the RDS Management Console",
                "SubnetIds": [
                    {
                        "Ref": "RDSSubNet"
                    },
                    {
                        "Ref": "EC2SubNet"
                    },
                    {
                        "Ref": "RDSSubNet2"
                    }
                ]
            }
        },
        "dbpgdataengdmsgroup": {
            "Type": "AWS::RDS::DBParameterGroup",
            "Properties": {
              "Description": "Parameter for Ticket Database",
              "Family": "postgres11",
              "Parameters": {
                "rds.logical_replication": "1",
                "wal_sender_timeout": "0",
                "max_wal_senders": "20",
                "max_replication_slots":"50"
              }
            }
        },
        "sgDMSLabSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "EC2 Security Group",
                "VpcId": {
                    "Ref": "dmsinstructorvpc"
                }
            }
        },
        "sgrdslaunchwizard2": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "RDS Security Group",
                "VpcId": {
                    "Ref": "dmsinstructorvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMSLabRDS-SG"
                    }
                ]
            }
        },
        "gw1": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "dmsinstructorvpc"
                },
                "InternetGatewayId": {
                    "Ref": "igw0887475a258f00277"
                }
            }
        },
        "subnetroute1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "rtb0c3fae104a7b64456"
                },
                "SubnetId": {
                    "Ref": "RDSSubNet2"
                }
            }
        },
        "subnetroute2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "rtb0c3fae104a7b64456"
                },
                "SubnetId": {
                    "Ref": "RDSSubNet"
                }
            }
        },
        "subnetroute3": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "rtb0c3fae104a7b64456"
                },
                "SubnetId": {
                    "Ref": "EC2SubNet"
                }
            }
        },
        "route1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "rtb0c3fae104a7b64456"
                },
                "GatewayId": {
                    "Ref": "igw0887475a258f00277"
                }
            },
            "DependsOn": "gw1"
        },
        "dchpassoc1": {
            "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
            "Properties": {
                "VpcId": {
                    "Ref": "dmsinstructorvpc"
                },
                "DhcpOptionsId": {
                    "Ref": "dopt1cc25278"
                }
            }
        },
        "ingress1": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgDMSLabSG"
                },
                "IpProtocol": "tcp",
                "FromPort": "22",
                "ToPort": "22",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "ingress2": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgrdslaunchwizard2"
                },
                "IpProtocol": "tcp",
                "FromPort": "5432",
                "ToPort": "5432",
                "SourceSecurityGroupId": {
                    "Ref": "sgDMSLabSG"
                },
                "SourceSecurityGroupOwnerId": "649225637812"
            }
        },
        "ingress3": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgrdslaunchwizard2"
                },
                "IpProtocol": "tcp",
                "FromPort": "5432",
                "ToPort": "5432",
                "CidrIp": "72.21.196.67/32"
            }
        },
        "egress1": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgDMSLabSG"
                },
                "IpProtocol": "-1",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "egress2": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgrdslaunchwizard2"
                },
                "IpProtocol": "-1",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "GenerateCDCData": {
            "DependsOn": ["rdsdmslabdb", "LambdaExecutionRole"],
            "Type": "AWS::Lambda::Function",
            "Properties": {
              "Code":  {
                "S3Bucket": "aws-dataengineering-day.workshop.aws",
                "S3Key": "dmslambda.zip"
              },
              "Description": "Function to generate CDC data",
              "FunctionName": "GenerateCDCData",
              "Handler": "index.handler",
              "MemorySize": 128,
              "Runtime": "nodejs12.x",
              "Timeout": 300,
              "Environment": {
                  "Variables": {
                    "HOST": { "Fn::GetAtt": ["rdsdmslabdb", "Endpoint.Address"] }
                  }
                },
                "Role": { "Fn::GetAtt": ["LambdaExecutionRole", "Arn"] },
                "VpcConfig": {
                  "SecurityGroupIds": [{ "Fn::GetAtt": ["sgDMSLabSG", "GroupId"] }],
                  "SubnetIds": [{ "Ref": "EC2SubNet" }]
                }
              }
        },
        "LambdaExecutionRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
              "AssumeRolePolicyDocument": {
                "Version": "2012-10-17",
                "Statement": [ 
                {
                  "Effect": "Allow",
                  "Principal": {
                    "Service": [ "lambda.amazonaws.com" ]
                  },
                    "Action": [ "sts:AssumeRole" ]
                 } 
                ]
              },
              "Policies": [ 
                {
                "PolicyName": "DMSlabRDSAccess",
                  "PolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                    {
                      "Sid" : "RDSAccess",
                      "Effect": "Allow",
                      "Action": [
                        "rds:*",
                        "logs:CreateLogGroup",
                        "logs:CreateLogStream",
                        "logs:PutLogEvents",
                        "ec2:CreateNetworkInterface",
                        "ec2:DescribeNetworkInterfaces",
                        "ec2:DeleteNetworkInterface"
                      ],
                      "Resource": "*"
                    }
                   ]
                  }
                }
              ]
            }
          }
    },
     "Outputs":{
        "DMSInstanceEndpoint":{
            "Description": "DMS Instance Endpoint",
            "Value": {
                 "Fn::GetAtt" : [ "rdsdmslabdb", "Endpoint.Address" ]
            }
        },
            "CDCFuntion" : {
            "Description": "CDC Function",
            "Value" : { "Fn::GetAtt" : [ "GenerateCDCData","Arn" ] }
       }
    },
    "Description": "DMS Lab Instructor account",
    "Metadata": {
        "AWS::CloudFormation::Designer": {
            "a79fb943-c167-4e59-8eda-911d4acc331f": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 810,
                    "y": 390
                },
                "z": 1,
                "embeds": []
            }
        }
    }
}
